Integer java 9 deprecation